# mcp-mothership

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
documents/implementation-artifacts/: 1-1-initialize-project-structure.md  1-2-shared-configuration-and-error-handling.md  2-1-imagen-mcp-server-with-basic-image-generation.md  2-2-image-generation-options-and-error-handling.md  3-1-sdk-migration-and-config-update.md  3-2-conversational-image-generation.md  3-3-updated-tests-and-regression.md  4-1-project-rename-and-shared-module-evolution.md  4-2-config-discovery-and-registration.md  4-3-process-manager-start-stop-health-shutdown.md  4-4-per-server-logging-system.md  5-1-imagen-transport-migration-streamable-http.md  5-2-metrics-endpoint-and-tracking.md  5-3-multi-agent-connectivity.md  6-1-dashboard-rest-api.md  6-2-dashboard-ui-server-list-and-controls.md  6-3-dashboard-ui-metrics-and-log-viewer.md  7-1-places-mcp-foundation.md  7-2-search-and-details-tools.md  7-3-scoring-reviews-and-batch-tools.md  deferred-work.md  sprint-status.yaml
documents/planning-artifacts/: architecture-mothership.md  architecture.md  epics.md  mcp-capability-platform-brainstorm.md  prd.md  product-brief-engagement-manager.md  sprint-change-proposal-2026-04-19.md
mothership/: __main__.py  api.py  config.py  discovery.py  manager.py
mothership/static/: index.html
shared/: config.py  errors.py  logging.py  logging_config.py
tests/: test_project_structure.py
(+26 files in other folders)
